--- a/vercel.json
+++ b/vercel.json
@@ -2,9 +2,9 @@
   "version": 2,
   "name": "to-do",
   "builds": [
-    { "src": "dist/assets/index-b6916128.js", "use": "@vercel/node" }
+    { "src": "src/main.tsx", "use": "@vercel/node" }
   ],
   "routes": [
-    { "src": "/(.*)", "dest": "src/assets/index-b6916128.js" }
+    { "src": "/(.*)", "dest": "src/main.tsx" }
   ]
 }
